docs: url 매칭 수정.

--- a/스프링 배치 실행/배치 초기화 설정/배치 초기화 설정.md
+++ b/스프링 배치 실행/배치 초기화 설정/배치 초기화 설정.md
@@ -14,13 +14,15 @@
 
 - application.properties or application.yml 파일에 설정함
 
-    - ```yaml
+    ```yaml
     batch:
-      job:
-        names: ${job.name:NONE}
-      initialize-schema: NEVER
-      tablePrefix: SYSTEM
+    job:
+      names: ${job.name:NONE}
+    initialize-schema: NEVER
+    tablePrefix: SYSTEM
     ```
+    
+    
 
 ## 3. Job 실행 옵션
 
